# YoloDeploymentWithOnnxruntimeAndOpencv

./: README.md  README_ch.md  YOLOV8-instance-seg.cpp  YOLOV8.cpp  apart.cpp  libtorchYolov8.cpp  libtorchyolov8seg.cpp  onnxrumtime_test.cpp  onnxrumtime_yolov8.cpp  onnxruntimeYOLOV5.cpp  yoloUltralytics.cpp  yolov5-seg.cpp  yolov5.cpp  yolov7.cpp  yolov8-seg.cpp  yolov8opencv.cpp  yolov8pose.cpp
YoloT/: CMakeLists.txt  YoloT.cpp
onnxLinuxYOLOV7/: CMakeLists.txt  main.cpp
onnxruntimeYOLOV8OBB/: CMakeLists.txt  yolov8obb.cpp
redetr_onnx_linux/: CMakeLists.txt  rtdetr.cpp
yolo-world/: CMakeLists.txt  YOLOWorld.py  yoloworld.cpp
yolop/: CMakeLists.txt  yolop.cpp
yolov8/: CMakeLists.txt  main.cpp
yolov8/include/: inference.h
yolov8/src/: inference.cpp
yolov8lib-torch/: CMakeLists.txt  yolov8libtorch.cpp
yolov8obbOPENCV/: CMakeLists.txt  yolov8obb.cpp
